--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -81,6 +81,11 @@
       <optional>true</optional>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.kafka</groupId>
+      <artifactId>spring-kafka</artifactId>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -116,10 +121,15 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
-        <version>3.3.4</version>
+        <version>${spring-boot.version}</version>
+        <configuration>
+          <mainClass>com.orderflow.order.OrderServiceApplication</mainClass>
+        </configuration>
         <executions>
           <execution>
-            <goals><goal>repackage</goal></goals>
+            <goals>
+              <goal>repackage</goal>
+            </goals>
           </execution>
         </executions>
       </plugin>
