--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -12,6 +12,18 @@ spring:
   jackson:
     serialization:
       WRITE_DATES_AS_TIMESTAMPS: false
+  kafka:
+    bootstrap-servers: ${KAFKA_BROKERS:localhost:29092}
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      properties:
+        acks: all
+        linger.ms: 5
+        enable.idempotence: true
+        compression.type: gzip
+        spring.json.add.type.headers: false
+        spring.json.value.default.type: "com.orderflow.common.events.OrderEvent"
 
 management:
   endpoints.web.exposure.include: "health,info"
